--- a/rechargestructure.html
+++ b/rechargestructure.html
@@ -2,6 +2,17 @@
 <html lang="en">
 
 <head>
+  <style>
+    .dropdown-menu {
+      width: 50%;
+    }
+
+    .scrollable-menu {
+      height: auto;
+      max-height: 200px;
+      overflow-x: hidden;
+    }
+  </style>
   <script>
   /* When the user clicks on the button,
 toggle between hiding and showing the dropdown content */
@@ -44,17 +55,6 @@ function filterFunction() {
 
   <!-- Custom styles for this page -->
   <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
-  <style>
-    .dropdown-menu {
-      width: 50%;
-    }
-
-    .scrollable-menu {
-      height: auto;
-      max-height: 200px;
-      overflow-x: hidden;
-    }
-  </style>
 
 </head>
 
@@ -155,32 +155,25 @@ function filterFunction() {
 
        <!-- Nav Item - BoreWell -->
        <li class="nav-item">
-          <a class="nav-link" href="borewellForm.html">
+          <a class="nav-link" href="#">
             <i class="fas fa-upload"></i>
             <span>Borewell</span></a>
         </li>
 
          <!-- Nav Item - Rainfall -->
        <li class="nav-item">
-          <a class="nav-link" href="rainfallForm.html">
+          <a class="nav-link" href="#">
             <i class="fas fa-spinner"></i>
             <span>Rainfall</span></a>
         </li>
 
-        <!-- Nav Item - Water Level -->
-        <li class="nav-item">
-            <a class="nav-link" href="waterLevelForm.html">
-              <i class="fa fa-plus-square"></i>
-              <span>Water Level</span></a>
-          </li>
+         <!-- Nav Item - Water Level -->
+       <li class="nav-item">
+          <a class="nav-link" href="#">
+            <i class="fa fa-plus-square"></i>
+            <span>Water Level</span></a>
+        </li>
 
-
-            <!-- Nav Item - Trees -->
-              <li class="nav-item">
-                      <a class="nav-link" href="treesForm.html">
-                      <i class="fa fa-tree"></i>
-                      <span>Trees</span></a>
-                  </li>
 
 
 
@@ -478,7 +471,7 @@ function filterFunction() {
           <a class="dropdown-item" href ="#">Zaregaon</a>
 
             </div>
-
+                    </form>
 
 
           <!-- Topbar Navbar -->
@@ -645,27 +638,8 @@ function filterFunction() {
         <!-- End of Topbar -->
 
         <!-- Begin Page Content -->
-        <div class="container-fluid">
-
-
-          <!-- Page Heading -->
-          <h1 class="h3 mb-2 text-gray-800">Ground Water Recharge Area</h1>
-          <!-- Content Row -->
-          <div class="row">
-            <div class="col-xl-8 col-lg-7">
-              <div class="card shadow mb-5">
-
-
-              <img width="150%" height="100%" src="img/Recharge_Priority_area_map.jpg" alt="Ground Water Recharge Area">
-</div>
-              <!-- Borewell Chart -->
-</div>
-</div>
-
-
 
         <!-- /.container-fluid -->
-
 
       </div>
       <!-- End of Main Content -->
