map size change

--- a/tables.html
+++ b/tables.html
@@ -663,7 +663,7 @@ function filterFunction() {
           <!-- DataTales Example -->
           <div class="card shadow mb-4">
             <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">Rain Data Table</h6>
+              <h6 class="m-0 font-weight-bold text-primary">Borewell Data Table</h6>
             </div>
 
             <div class="card-body">
@@ -672,6 +672,8 @@ function filterFunction() {
 
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                   <thead onloadedmetadata="Rainfall(mm)">
+
+
                     <tr>
                       <th>Owner</th>
                       <th>Location</th>
@@ -683,6 +685,9 @@ function filterFunction() {
                       <th>Water quality</th>
                       <th>Duration of pumping </th>
                       <th>No of Dependant</th>
+
+
+
 
                     </tr>
                     </thead>
