Rainfall sample output added on rain.html

--- a/tables.html
+++ b/tables.html
@@ -654,9 +654,7 @@ function filterFunction() {
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-2 text-gray-800">Tables</h1>
-          <p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below. For more information about DataTables, please visit the <a target="_blank" href="https://datatables.net">official DataTables documentation</a>.</p>
-
+          <h1 class="h2 mb-2 text-gray-800"> Borewells </h1>
 
           <div id="mapid" class="parent" style="height: 500px"></div>
 
