--- a/rain.html
+++ b/rain.html
@@ -655,7 +655,8 @@ function filterFunction() {
 
           <!-- Page Heading -->
           <h1 class="h3 mb-2 text-gray-800">Tables</h1>
-          <p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below. For more information about DataTables, please visit the <a target="_blank" href="https://datatables.net">official DataTables documentation</a>.</p>
+
+          <img width="100%" height="100%" src="img/rainfallMap.png" alt="Ground Water Recharge Area">
 
 
           <div id="mapid" class="parent" style="height: 500px"></div>
@@ -669,7 +670,7 @@ function filterFunction() {
             <div class="card-body">
 
               <div class="table-responsive">
-                
+
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                   <thead onloadedmetadata="Rainfall(mm)">
                     <tr>
