--- a/charts.html
+++ b/charts.html
@@ -52,6 +52,7 @@ function filterFunction() {
 
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/tooplate.css">
 
 </head>
 
@@ -677,6 +678,28 @@ function filterFunction() {
                   </div>
                 </div>
 
+                 <!-- Rainfall Chart -->
+               <div class="card shadow mb-5">
+                <div class="card-header py-4">
+                  <h6 class="m-0 font-weight-bold text-primary">Rainfall Data 2</h6>
+                </div>
+                <div class="card-body">
+                  <div class="chart-area">
+                    <div id="lineChart"></div>
+                    <div class="row tm-content-row tm-mt-big">
+                      <div class="tm-col tm-col-big">
+                          <div class="bg-white tm-block h-100">
+                              <h2 class="tm-block-title">Latest Hits</h2>
+                              <canvas id="lineChart"></canvas>
+                          </div>
+                      </div>
+                    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+                  </div>
+                </div>
+              </div>
+
+
+
               <!-- Bar Chart -->
               <div class="card shadow mb-5">
                 <div class="card-header py-4">
@@ -778,6 +801,49 @@ function filterFunction() {
   <script src="js/demo/chart-bar-rainfall.js"></script>
 
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+
+
+<script src="js/dum/jquery-3.3.1.min.js"></script>
+<!-- https://jquery.com/download/ -->
+<script src="js/dum/moment.min.js"></script>
+<!-- https://momentjs.com/ -->
+<script src="js/dum/utils.js"></script>
+<script src="js/dum/Chart.min.js"></script>
+<!-- http://www.chartjs.org/docs/latest/ -->
+<script src="js/dum/fullcalendar.min.js"></script>
+<!-- https://fullcalendar.io/ -->
+<script src="js/dum/bootstrap.min.js"></script>
+<!-- https://getbootstrap.com/ -->
+
+<script src="js/dum/tooplate-scripts.js"></script>
+    <script>
+        let ctxLine,
+            ctxBar,
+            ctxPie,
+            optionsLine,
+            optionsBar,
+            optionsPie,
+            configLine,
+            configBar,
+            configPie,
+            lineChart;
+        barChart, pieChart;
+        // DOM is ready
+        $(function () {
+            updateChartOptions();
+            drawLineChart(); // Line Chart
+            drawBarChart(); // Bar Chart
+            drawPieChart(); // Pie Chart
+            drawCalendar(); // Calendar
+
+            $(window).resize(function () {
+                updateChartOptions();
+                updateLineChart();
+                updateBarChart();
+                reloadPage();
+            });
+        })
+    </script>
 
 </body>
 
