mannual download  add

--- a/index.html
+++ b/index.html
@@ -701,9 +701,10 @@ for (i = 0; i < a.length; i++) {
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
             <h2 class="h3 mb-0 text-gray-800">Welcome to Mahabhujal Dashboard</h2>
 
+            <div><a href="mannual.html" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i>Download Mannual</a>
 
   <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
-          </div>
+</div>        </div>
 
 
           <!-- Content Row -->
