waterlevel trees borewell rainfall tab added and side bar is changed

--- a/index.html
+++ b/index.html
@@ -145,7 +145,26 @@ for (i = 0; i < a.length; i++) {
         Interface
       </div>
 
+<!-- Nav Item - Borewell Tables -->
 
+<li class="nav-item">
+  <a class="nav-link" href="aquifer.html">
+    <i class="fas fa-fill"></i> 
+    <span>Aqufier Mapping</span></a>
+</li>
+
+<li class="nav-item">
+  <a class="nav-link" href="runoff.html">
+    <i class="fas fa-directions"></i> 
+    <span>Runoff</span></a>
+</li>
+
+
+<li class="nav-item">
+  <a class="nav-link" href="demandanalysis.html">
+    <i class="fas fa-bullhorn"></i> 
+    <span>Demand Analysis</span></a>
+</li>
 
       <!-- Nav Item - Utilities Collapse Menu -->
       <!--
@@ -167,39 +186,6 @@ for (i = 0; i < a.length; i++) {
         </div>
       </li> -->
 
-        <!-- Nav Item - BoreWell -->
-        <li class="nav-item">
-            <a class="nav-link" href="borewellForm.html">
-              <i class="fas fa-upload"></i>
-              <span>Borewell</span></a>
-          </li>
-
-         <!-- Nav Item - Rainfall -->
-       <li class="nav-item">
-          <a class="nav-link" href="rainfallForm.html">
-            <i class="fas fa-spinner"></i>
-            <span>Rainfall</span></a>
-        </li>
-
-         <!-- Nav Item - Water Level -->
-       <li class="nav-item">
-          <a class="nav-link" href="waterLevelForm.html">
-            <i class="fa fa-plus-square"></i>
-            <span>Water Level</span></a>
-        </li>
-         <!-- Nav Item - Trees -->
-      <li class="nav-item">
-          <a class="nav-link" href="treesForm.html">
-            <i class="fa fa-tree"></i>
-            <span>Trees</span></a>
-        </li>
-
-
-
-
-
-
-
       <!-- Divider -->
       <hr class="sidebar-divider">
 
@@ -207,6 +193,8 @@ for (i = 0; i < a.length; i++) {
       <div class="sidebar-heading">
         Analysis
       </div>
+
+       
 
       <!-- Nav Item - Pages Collapse Menu -->
       <!--<li class="nav-item">
@@ -228,12 +216,41 @@ for (i = 0; i < a.length; i++) {
         </div>
       </li>-->
 
-      <!-- Nav Item - Alerts -->
+       <!-- Nav Item - Borewell Tables -->
+
+ <li class="nav-item">
+  <a class="nav-link" href="BoreWellTables.html">
+    <i class="fas fa-upload"></i> 
+    <span>Borewell</span></a>
+</li>
+
+<!-- Nav Item - Rainfall Tables -->
+
+<li class="nav-item">
+  <a class="nav-link" href="RainfallTable.html">
+    <i class="fas fa-spinner"></i>
+    <span>Rainfall</span></a>
+</li>
+
+<!-- Nav Item - Water Level -->
+<li class="nav-item">
+    <a class="nav-link" href="WaterLevelTable.html">
+      <i class="fa fa-plus-square"></i>
+      <span>Water Level</span></a>
+  </li> 
+          <!-- Nav Item - Trees -->
+            <li class="nav-item">
+                    <a class="nav-link" href="TreesTable.html">
+                    <i class="fa fa-tree"></i>
+                    <span>Trees</span></a>
+                </li>
+
+      <!-- Nav Item - Maps -->
       <li class="nav-item">
-          <a class="nav-link" href="#">
-            <i class="fas fa-bell"></i>
-            <span>Alerts</span></a>
-        </li>
+        <a class="nav-link" href="maps.html">
+          <i class="fas fa-map"></i>
+          <span>Maps</span></a>
+      </li>
 
       <!-- Nav Item - Charts -->
       <li class="nav-item">
@@ -242,28 +259,11 @@ for (i = 0; i < a.length; i++) {
           <span>Charts</span></a>
       </li>
 
-      <!-- Nav Item - Tables -->
+      <!-- Nav Item - Alerts -->
       <li class="nav-item">
-        <a class="nav-link" href="rechargestructure.html">
-          <i class="fas fa-fw fa-chart-area"></i>
-          <span>Recharge Strucures</span></a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="tables.html">
-          <i class="fas fa-fw fa-chart-area"></i>
-          <span>Borewell</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="rain.html">
-          <i class="fas fa-fw fa-chart-area"></i>
-          <span>Rainfall</span></a>
-      </li>
-      <!-- Nav Item - Maps -->
-      <li class="nav-item">
-        <a class="nav-link" href="maps.html">
-          <i class="fas fa-map"></i>
-          <span>Maps</span></a>
+        <a class="nav-link" href="#">
+          <i class="fas fa-bell"></i>
+          <span>Alerts</span></a>
       </li>
 
       <!-- Divider -->
