--- a/mannual.html
+++ b/mannual.html
@@ -638,6 +638,17 @@ function filterFunction() {
         <!-- End of Topbar -->
 
         <!-- Begin Page Content -->
+        <div >
+          <h1 class="row justify-content-center">Guidlines</h1>
+          <div>
+          <li >Mahabhujal Process</li>
+          <li>Forgot Password</li>
+          <li>Forgot Username</li>
+        </div>
+
+
+
+        </div>
 
         <!-- /.container-fluid -->
 
