--- a/rain.html
+++ b/rain.html
@@ -668,6 +668,30 @@ function filterFunction() {
             </div>
 
             <div class="card-body">
+              <div class="row">
+       <div class="panel panel-primary filterable">
+
+
+               <div class="pull-right">
+                   <button class="btn btn-default btn-xs btn-filter"><span class="glyphicon glyphicon-filter"></span> Filter</button>
+               </div>
+
+           <table class="table">
+               <thead>
+                   <tr class="filters">
+
+
+
+                       <th><input type="text" class="form-control" placeholder="mm" disabled></th>
+                       <th><input type="text" class="form-control" placeholder="Location" disabled></th>
+                       <th><input type="text" class="form-control" placeholder="volenteer name" disabled></th>
+                       <th><input type="text" class="form-control" placeholder="date" disabled></th>
+                       <th><input type="text" class="form-control" placeholder="time" disabled></th>
+
+                   </tr>
+               </thead>
+             </div>
+
 
               <div class="table-responsive">
 
@@ -828,6 +852,8 @@ function filterFunction() {
 
   <!-- Page level custom scripts -->
   <script src="js/demo/datatables-demo.js"></script>
+  <script src="js/demo/table.js"></script>
+
 
 </body>
 
