--- a/TreesTable.html
+++ b/TreesTable.html
@@ -723,8 +723,8 @@ function filterFunction() {
           <h1 class="h3 mb-2 text-gray-800">Mahabhujal - Trees Maps, Analysis and Tables</h1>
           <p class="mb-4">Enter Location and view trees on maps with their respactive data in tables...</p>
           <a href="treesForm.html" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Add Tree</a>
-          <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Delete Tree</a>
-          <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Update Tree</a>
+          <a href="deleteTree.html" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Delete Tree</a>
+          <a href="updateTree.html" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Update Tree</a>
 </div>
 
           <!--Map Code-->
