--- a/index.html
+++ b/index.html
@@ -70,19 +70,12 @@ for (i = 0; i < a.length; i++) {
     <div id="navbarSupportedContent" class="collapse navbar-collapse">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active"><a href="#" class="nav-link">Home <span class="sr-only">(current)</span></a></li>
-        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-        <li class="nav-item"><a href="mannual.html" class="nav-link">User Mannual</a></li>
-
-
-
-        <li class="nav-item"><a href="aquifer.html" class="nav-link">Aqufier Mapping</a></li>
-
-        <li class="nav-item"><a href="demandanalysis.html" class="nav-link">Demand Analysis</a></li>
-        <li class="nav-item"><a href="runoff.html" class="nav-link">Runoff</a></li>
+        <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
         <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
         <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
         <li class="nav-item"><a href="register.html" class="nav-link">Register</a></li>
-        <li class="nav-item"><a href="faq.html" class="nav-link">FAQ</a></li>
+        <li class="nav-item"><a href="FAQs.html" class="nav-link">FAQ</a></li>
+        <li class="nav-item"><a href="mannual.html" class="nav-link">User Mannual</a></li>
 
 
 
