--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ for (i = 0; i < a.length; i++) {
     <div id="navbarSupportedContent" class="collapse navbar-collapse">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active"><a href="#" class="nav-link">Home <span class="sr-only">(current)</span></a></li>
-        <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">About Us</a></li>
         <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
         <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
         <li class="nav-item"><a href="register.html" class="nav-link">Register</a></li>
@@ -85,7 +85,7 @@ for (i = 0; i < a.length; i++) {
     </div>
   </div>
   <!-- Nav Item - Pages Collapse Menu -->
-  <!--<li class="nav-item">
+ <!-- <li class="nav-item">
    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
       <i class="fas fa-fw fa-folder"></i>
       <span>Pages</span>
